-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.7.4
-
None
-
2c285b893caae37f132de75bcc77bf5471107689
For using QString with STL algorithms some typedefs are missing. Actually only got challenged by the lack of the value_type definition, but looking at QList some more seem to be missing:
typedef int size_type;
typedef QChar value_type;
typedef value_type *pointer;
typedef const value_type *const_pointer;
typedef value_type &reference;
typedef const value_type &const_reference;
typedef qptrdiff difference_type;