Add a few more typedefs to QString, for STL compatibility

Task-number: QTBUG-22890

Change-Id: I457be6367e577dee30532383d10c519b2f2617b3
Reviewed-by: Robin Burchell <robin+qt@viroteck.net>