src/corelib/tools/qstring.h
@@ -657,8 +657,12 @@ public:
     const_iterator constEnd() const;
 
     // STL compatibility
+    typedef int size_type;
+    typedef qptrdiff difference_type;
     typedef const QChar & const_reference;
     typedef QChar & reference;
+    typedef QChar *pointer;
+    typedef const QChar *const_pointer;
     typedef QChar value_type;
     inline void push_back(QChar c) { append(c); }
     inline void push_back(const QString &s) { append(s); }
